- A lot of enhancements and translation in withdraw module.
- Full support of Mysql option mode=strict.
- Added a new event from member module to agenda tracked events.

For translators:
- The errors language file contains only error or warning messages with 
  prefix Error or Warning.
- HTML Output is by default in UTF8 and language files can be provided
  in UTF8.

For developers:
- Update skeletons.
- Add an experimental Cash Desk module.
- Added new triggers events in agenda module.
- All submodules are moved in the includes directory.
- Removed some deprecated files.
- Menu managers now use same class name for their menu entry
  and add a different value in an HTML id for each entry. This allows
  to build skins that use different style for each menu entry.

***** Changelog for 2.4 compared to 2.2 *****

For users:
- Add a calendar module (module agenda) with ical/vcal/rss export.
- Look enhancement in graphics (thanks artichow).
- Add tel and fax on delivery addresses.
- Add a tool to edit personalized menu.
- Add an ical and vcal export link in agenda and webcalendar module.
- Reduce memory usage.
- Now triggers are enabled/disabled according to module they refers to.
- Fix infinite loop on popup calendar.
- Change in tanslation to make Dolibarr easier to understand.
- Add a warning when sending a mail from a user with no email defined.
- Added clicktodial module.
- Add a property private/public in contact. This allows to user Dolibarr
  for a personnal address book.
- French NAF code can accept 5 chars.
- Supplier prices can be input with or without taxe.
- New generic numbering modules to offer more solutions for generating
  automatic id.
- Add new predefined exports wizards (stocks, suppliers, taxes...).
- Add feature to log security events (logon, change of users, passwords).
- Can link all documents (included supplier invoices and orders) to a 
  project.
- Can attach several files to email when sending an invoice, order or
  proposal by email.